fix missing border on search box

--- a/geoportal/src/main/webapp/custom/custom.css
+++ b/geoportal/src/main/webapp/custom/custom.css
@@ -128,6 +128,11 @@ body {
   pointer-events: all;
 }
 
+.g-search-bar .search-box input#searchBox {
+  margin-left: 0;
+}
+
+
 .g-search-bar .search-box .input-group {
   border: 1px solid #ff3817;
   border-radius: 3px;
